Updated task list code mainly to remove linethroug from edit and delete

--- a/styles.css
+++ b/styles.css
@@ -81,6 +81,9 @@
     text-decoration: line-through;
     color: #808080;
   }
+  .add-remove-linethrough{
+    text-decoration: none;
+  }
   
   /* CSS styles for the button */
 #addTaskBtn {
